# wireflux

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  config.cpp  config.h  config.ui  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  serialdevice.cpp  serialdevice.h
